--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
             <option value="fma">FMA</option>
         </select><br>
       <label for="fcrs">Course Number (CRN):</label>
-        <input type="text" id="fcrs" name="fcrs" value=""><br><br>
+        <input type="text" id="fcrs" name="fcrs" value="3219"><br><br>
       <input type="submit" value="Submit">
     </form>
     </div>
