initial Twilio code

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <!-- Input is sent to the file specified here, currently HelloWorld.py -->
     <div id="container">
 
-    <form action="#" method="post">
+    <form action="/course_select" method="post">
       <label for="fdept">Course Department:</label>
         <select name="fdept" id="fdept">
             <option value="cst">CST</option>
