--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
     <form action="/course_select" method="post">
       <label for="fdept">Course Department:</label>
         <select name="fdept" id="fdept">
-            <option value="cst">CST</option>
+            <option value="cst">CIS</option>
             <option value="arch">ARCH</option>
             <option value="acct">ACCT</option>
             <option value="bioe">BIOE</option>
