--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
             <option value="fma">FMA</option>
         </select><br>
       <label for = "fcrs1">1st Course Number: </label>
-        <input type="text" id="fcrs1" name="fcrs1" value="3219"><br>
+        <input type="text" id="fcrs1" name="fcrs1" value=""><br>
 
       <label for = "fcrs2">2nd Course Number: </label>
         <input type="text" id="fcrs2" name="fcrs2" value=""><br>
