--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,15 @@
       <label for = "fcrs4">4th Course Number: </label>
         <input type="text" id="fcrs4" name="fcrs4" value=""><br><br>
 
-      <input type="submit" value="Submit">
+      <label for = "phone">Phone Number: </label>
+        <input type="text" id="phone" name="phone" value=""><br><br>
+
+      <input type="submit" value="Submit"><br><br>
+
+      <h2 align="center">Your Schedule</h2>
+
+      <input type="text" style="font-size: 18pt; height: 100px; width:500px;" name="output" id="output" value="">
+
     </form>
     </div>
 
